--- a/K_Bridge/K_Bridge.csproj
+++ b/K_Bridge/K_Bridge.csproj
@@ -5,16 +5,24 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
+
+  <ItemGroup>
+    <_ContentIncludedByDefault Remove="wwwroot\img\arrow_down.png" />
+  </ItemGroup>
 <ItemGroup>
   <UpToDateCheckBuilt Include="wwwroot/css/site.css" Set="Css" />
   <UpToDateCheckBuilt Include="tailwind.config.js" Set="Css" />
 </ItemGroup>
 <ItemGroup>
+  <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="6.0.0" />
   <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.0">
     <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     <PrivateAssets>all</PrivateAssets>
   </PackageReference>
   <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.0" />
+</ItemGroup>
+<ItemGroup>
+  <Folder Include="Migrations\" />
 </ItemGroup>
 
 <Target Name="Tailwind" BeforeTargets="Build">
