--- a/K_Bridge/K_Bridge.csproj
+++ b/K_Bridge/K_Bridge.csproj
@@ -32,6 +32,7 @@
 <ItemGroup>
   <Folder Include="Migrations\" />
   <Folder Include="Models\ViewModels\" />
+  <Folder Include="TagHelpers\" />
   <Folder Include="Views\Admin\" />
 </ItemGroup>
 <ItemGroup>
