--- a/K_Bridge/K_Bridge.csproj
+++ b/K_Bridge/K_Bridge.csproj
@@ -18,6 +18,7 @@
   <UpToDateCheckBuilt Include="tailwind.config.js" Set="Css" />
 </ItemGroup>
 <ItemGroup>
+  <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
   <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="6.0.0" />
   <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.0">
     <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -31,7 +32,6 @@
 </ItemGroup>
 <ItemGroup>
   <Folder Include="Migrations\" />
-  <Folder Include="Models\ViewModels\" />
   <Folder Include="TagHelpers\" />
   <Folder Include="Views\Admin\" />
 </ItemGroup>
