Admin/Forums BaseUI

--- a/K_Bridge/K_Bridge.csproj
+++ b/K_Bridge/K_Bridge.csproj
@@ -34,6 +34,7 @@
 </ItemGroup>
 <ItemGroup>
   <Folder Include="Migrations\" />
+  <Folder Include="Pages\Admin\Forums\Topics\Post\" />
   <Folder Include="TagHelpers\" />
   <Folder Include="Views\Admin\" />
 </ItemGroup>
