Create account not handle error

--- a/K_Bridge/K_Bridge.csproj
+++ b/K_Bridge/K_Bridge.csproj
@@ -36,6 +36,7 @@
 <ItemGroup>
   <Folder Include="TagHelpers\" />
   <Folder Include="Views\Admin\" />
+  <Folder Include="wwwroot\uploads\" />
 </ItemGroup>
 <ItemGroup>
   <None Include="Views\Home\Search.cshtml" />
