--- a/K_Bridge/K_Bridge.csproj
+++ b/K_Bridge/K_Bridge.csproj
@@ -21,6 +21,9 @@
 </ItemGroup>
 <ItemGroup>
   <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+  <PackageReference Include="Hangfire" Version="1.8.14" />
+  <PackageReference Include="Hangfire.AspNetCore" Version="1.8.14" />
+  <PackageReference Include="Hangfire.SqlServer" Version="1.8.14" />
   <PackageReference Include="HtmlSanitizer" Version="8.1.866-beta" />
   <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="6.0.0" />
   <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.0">
