--- a/K_Bridge/appsettings.json
+++ b/K_Bridge/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "KBridgeConnection": "Server=DESKTOP-U4Q02DU\\SQLEXPRESS01;Database=KBridgeDB;Trusted_Connection=True;"
+    "KBridgeConnection": "Server=DESKTOP-U3SCSUK\\SQLEXPRESS;Database=KBridgeDB;Trusted_Connection=True;"
   }
 }
